# ProgLangComp_onESP32

./: README.md  tests_default(Os_Oz)_v2.csv
C-Cpp/: README.md  platformio.ini
C-Cpp/include/: a_bencher.h  a_data.h  a_tests.h  a_util.h  t_crc32_ieee.h  t_fft2r_sc16_ansi.h  t_fir_f32_ansi.h  t_iir_biquad_f32_ansi.h  t_sha256.h
C-Cpp/src/: a_bencher.cpp  a_data.cpp  a_tests.cpp  main.cpp  t_crc32_ieee.cpp  t_fft2r_sc16_ansi.cpp  t_fir_f32_ansi.cpp  t_iir_biquad_f32_ansi.cpp  t_sha256.cpp
MATLAB models/: a_data.m  a_validator.m  t_FFT16.m  t_crc32_ieee.m  t_fir.m  t_iir.m  t_sha256.m
rust-std/: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
rust-std/.cargo/: config.toml
rust-std/src/: a_bencher.rs  a_data.rs  a_tests.rs  main.rs  t_crc32_ieee.rs  t_fft_2r_sc16_ansi.rs  t_fir_f32_ansi.rs  t_iir_biquad_f32_ansi.rs  t_sha256.rs
tinyGO/: README.md  go.mod  main  main.go  tinyGO  tinyGO_tests
tinyGO/a_bencher/: bencher.go
tinyGO/a_data/: data.go
tinyGO/a_data2/: data2.go
tinyGO/a_tests/: tests.go
tinyGO/t_crc32_ieee/: crc32_ieee.go
tinyGO/t_fft2r_sc16_ansi/: fft2r_sc16_ansi.go
tinyGO/t_fir_f32_ansi/: fir_f32_ansi.go
tinyGO/t_iir_biquad_f32_ansi/: iir_biquad_ansi.go
tinyGO/t_sha256/: sha256.go
uPython/: README.md  boot.py  main.py  t_crc32_Ieee.py  t_fft_2r_sc16_ansi.py  t_fir_f32_ansi.py  t_iir_biquad_ansi.py  t_sha256.py
uPython/a_ESP32_scripts/: a_bencher.py  a_tests.py
uPython/a_ESP32_scripts/a_data/: a_fft_i16_rez.py  a_fft_i16_table.py  a_fir_f32_rez.py  a_iir_f32_rez.py  a_in_data.py
uPython/a_pc_scripts/: a_bencher.py
(+7 files in other folders)
